--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
     "expo": "~44.0.0",
     "expo-file-system": "~13.1.4",
     "expo-image-picker": "~12.0.1",
