--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "expo": "~44.0.0",
     "expo-file-system": "~13.1.4",
     "expo-image-picker": "~12.0.1",
+    "expo-localization": "~12.0.0",
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "i18n-js": "^3.9.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
