--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-localization": "~12.0.0",
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "i18n-js": "^3.9.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
